
0.129 - slight tweak to error reporting

0.128 - modify-features: feature start can't be shifted to negative location

0.127 - test-counts: now has a mode for fitnoise 
        norm-from-samples: optimized
        igv-plots: optimized

0.126 - fitnoise.R now uses makeForkCluster

0.125 - test-counts: modes common and trend were incorrectly outputting ln fold changes,
            now correctly output log2 fold changes
        heatmap: now always filters out genes with identical expression in all samples,
            rather than crashing

0.124 - Fix bug checking for JAR availability.

0.123 - Add fitnoise.R
        Fix bug in annotation.Annotation.relative_to for strand==-1
        Report memory use in log files
        Fix to "power-variant-call:"
        Slightly reduced memory usage in igv-plots and filter 
          (changed iterator implementation in samconsensus.Depth)
        "storage" module added, provides convenient collections of memory mapped numpy arrays, not currently in use

0.122 - Revert back to starting new processes manually on posix systems (something seems to be broken).

0.121 - More Windows compatability:
        Default to using multiprocessing to start new processes.

0.120 - Use os.urandom rather than file /dev/urandom.
        Strip color escape codes on non-posix OS.
        Windows compatability fix for legion.py.

0.119 - Allow None as value in config.Section.

0.118 - Better text sizing in heatmaps.
        --three-prime option in igv-plots.
        R: fix read.grouped.table, don't treat # as comment in body of table

0.117 - Fix to R module: read.counts included locus_tag in genes information

0.116 - Add some newlines to R vector literals, to stop R barfing on huge values.
        Fix out-by-one in IGV plots of 5' and 3' ends.

0.115 - Unset DISPLAY variable when running SplitsTree (crashes if DISPLAY is present and invalid).
        Heatmap lists gene symbol before locus tag.

0.114 - Minor changes for the benefit of tail-tools.
